--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,14 +1,11 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
 resources:
-- ./balance-reader.yaml
-- ./config.yaml
-- ./contacts.yaml
-- ./frontend-ingress.yaml
-- ./frontend.yaml
-- ./jwt-secret.yaml
-- ./kustomization.yaml
-- ./ledger-writer.yaml
-- ./loadgenerator.yaml
-- ./transaction-history.yaml
-- ./userservice.yaml
+- balance-reader.yaml
+- config.yaml
+- contacts.yaml
+- frontend-ingress.yaml
+- frontend.yaml
+- jwt-secret.yaml
+- ledger-writer.yaml
+- loadgenerator.yaml
+- transaction-history.yaml
+- userservice.yaml
