--- a/base/frontend.yaml
+++ b/base/frontend.yaml
@@ -51,8 +51,8 @@ spec:
         # - name: CYMBAL_LOGO
         #   value: "false"
         # Customize the bank name used in the header. Defaults to 'Bank of Anthos' - when CYMBAL_LOGO is true, uses 'CymbalBank'
-        # - name: BANK_NAME
-        #   value: ""
+        - name: BANK_NAME
+          value: "Bank of Anthos"
         - name: DEFAULT_USERNAME
           valueFrom:
             configMapKeyRef:
@@ -104,7 +104,7 @@ kind: Service
 metadata:
   name: frontend
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: frontend
   ports:
