--- a/overlays/dc-on-prem/kustomization.yaml
+++ b/overlays/dc-on-prem/kustomization.yaml
@@ -3,6 +3,15 @@ resources:
 - accounts-db.yaml
 - ledger-db.yaml
 namespace: boa
+
+patchesJson6902:
+- target:
+    group: apps
+    version: v1
+    kind: Deployment
+    name: frontend
+  path: ./kustomizeconfig/frontend-patch.yaml
+
 transformers:
 - ./kustomizeconfig/suffix.yaml
 - ./kustomizeconfig/statefulset_annotation.yaml
