--- a/overlays/dc-on-prem/kustomizeconfig/deployment_annotation.yaml
+++ b/overlays/dc-on-prem/kustomizeconfig/deployment_annotation.yaml
@@ -3,7 +3,7 @@ kind: AnnotationsTransformer
 metadata:
   name: not-important-Deployment
 annotations:
-  configmanagement.gke.io/cluster-selector: dc-singapore-on-prem
+  configmanagement.gke.io/cluster-selector: anthos-on-gcp
 fieldSpecs:
 - kind: Deployment
   path: metadata/annotations
