--- a/overlays/dc-on-prem/kustomizeconfig/suffix.yaml
+++ b/overlays/dc-on-prem/kustomizeconfig/suffix.yaml
@@ -2,7 +2,7 @@ apiVersion: builtin
 kind: PrefixSuffixTransformer
 metadata:
   name: not-important-Deployment
-suffix: "-dc-onprem"
+suffix: "-dc-on-gcp"
 fieldSpecs:
 - kind: Deployment
   path: metadata/name
