--- a/overlays/dr-cloud/kustomizeconfig/suffix.yaml
+++ b/overlays/dr-cloud/kustomizeconfig/suffix.yaml
@@ -2,7 +2,7 @@ apiVersion: builtin
 kind: PrefixSuffixTransformer
 metadata:
   name: not-important-Deployment
-suffix: "-dr-cloud"
+suffix: "-dr-on-aws"
 fieldSpecs:
 - kind: Deployment
   path: metadata/name
