--- a/base/config.yaml
+++ b/base/config.yaml
@@ -19,7 +19,7 @@ metadata:
   name: environment-config
 data:
   LOCAL_ROUTING_NUM: "883745000"
-  PUB_KEY_PATH: "/root/.ssh/publickey"
+  PUB_KEY_PATH: "/tmp/.ssh/publickey"
 # [END gke_boa_kubernetes_manifests_config_configmap_environment_config]
 ---
 # [START gke_boa_kubernetes_manifests_config_configmap_service_api_config]
@@ -43,6 +43,6 @@ metadata:
 data:
   USE_DEMO_DATA: "True"
   DEMO_LOGIN_USERNAME: "testuser"
-  # All demo user accounts are hardcoded to use the login password 'password'
-  DEMO_LOGIN_PASSWORD: "password"
+  # All demo user accounts are hardcoded to use the login password 'bankofanthos'
+  DEMO_LOGIN_PASSWORD: "bankofanthos"
 # [END gke_boa_kubernetes_manifests_config_configmap_demo_data_config]
